# os-net-descriptor-passing

./: CMakeLists.txt
client/: client.cpp  client.h  client_exception.h
server/: server.cpp  server.h  server_exception.h
starters/: client_starter.cpp  server_starter.cpp
utils/: data_builder.h  fifo.cpp  fifo.h  utils.cpp  utils.h  wrapper.h
